--- a/client/src/CSS/NavBar.css
+++ b/client/src/CSS/NavBar.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: rgb(226, 226, 226);
+  background-color: rgb(322a26);
   position: absolute;
   top: 0px;
   width: 100%;
