--- a/client/src/CSS/App.css
+++ b/client/src/CSS/App.css
@@ -4,7 +4,7 @@
 }
 
 .App {
-  background-color: #ffffff;
+  background-color: #572929;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
