--- a/client/src/CSS/NavBar.css
+++ b/client/src/CSS/NavBar.css
@@ -1,11 +1,11 @@
 nav {
-  background-color: rgb(322a26);
+  background-color: rgb(0, 0, 0);
   position: absolute;
   top: 0px;
   width: 100%;
   display: flex;
   font-size: 14px;
-  height: 20px;
+  height: 25px;
   align-items: center;
   justify-content: space-between;
 }
@@ -13,11 +13,15 @@ nav {
 p {
   font-size: 12px;
   color: crimson;
-  padding: 0px 10px;
+  padding: 0px 16px;
 }
 
 .user {
   display: flex;
+}
+.user-logged-in {
+  color: rgb(255, 255, 255);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h4 {
