--- a/client/src/Util/Search.css
+++ b/client/src/Util/Search.css
@@ -1,10 +1,11 @@
 .main-page-search {
   position: relative;
   padding: 4px;
-  right: 10px;
-
-  flex-grow: 0;
+  right: 20px;
+  top: 20px;
 }
 
 .search-container {
+  display: flex;
+  align-items: flex-start;
 }
